# gbrs

./: .gitignore  Cargo.toml  todo.md
gbrs/: Cargo.toml
gbrs/src/: cpu.rs  lib.rs  mmu.rs  ppu.rs
gbrs/src/cpu/: opcode.rs
proptest-regressions/: ppu.txt
proptest-regressions/cpu/: opcode.txt
sdl2-frontend/: Cargo.toml
sdl2-frontend/src/: main.rs
src/: cartridge.rs  cpu.rs  joypad.rs  lib.rs  main.rs  mmu.rs  ppu.rs  timer.rs  util.rs
src/cpu/: instruction.rs  opcode.rs  register_file.rs
