[package]
name = "gbrs"
version = "0.1.0"
edition = "2021"

[dependencies]
sdl2 = "0.34"
rand = "0.8"
proptest = "1"
enumset = "1"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
name = "gbrs"
path = "src/lib.rs"

[[bin]]
name = "gbrs"
path = "src/main.rs"
