[package]
name = "gbrs"
version = "0.1.0"
edition = "2021"

[dependencies]
sdl2 = "0.34"
proptest = "1"
enumset = { version = "1", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
typetag = "0.2"
serde-big-array = "0.5.1"

[lib]
name = "gbrs"
path = "src/lib.rs"

[[bin]]
name = "gbrs"
path = "src/main.rs"
