[package]
name = "gbrs"
version = "0.1.0"
edition.workspace = true

[dependencies]
sdl2 = "0.34"
proptest = "1"
enumset = { version = "1", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
typetag = "0.2"
serde-big-array = "0.5.1"
chrono = "0.4.38"
twox-hash = "1.6.3"
anyhow = "1.0.93"
rmp-serde = "1.3.0"
serde_json = "1.0.132"
zstd = "0.13.2"


[lib]
name = "gbrs"
path = "src/lib.rs"
